# mxapplist

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 474947b1481c_initial_database_setup.py  5206da4b5f35_create_initial_tables.py
mxapplist/: mxapplist.py
tests/: test_mxapplist.py
